dynamic sizing of the music panel to prevent unreachable overflow

--- a/style.css
+++ b/style.css
@@ -114,14 +114,16 @@ p {
 
 .music-container {
 	width: 100%;
-	height: 480px;
+	height: 100%;
+	max-height: 424px;
 	overflow: scroll;
 	padding-left: 15px;
-	transition: height .5s ease-in-out;
+	transition: max-height .5s ease-in-out;
+	position: relative;
 }
 
 .music-container-min {
-	height: 0px;
+	max-height: 0px !important;
 	overflow: hidden;
 }
 
